--- a/presentation.qmd
+++ b/presentation.qmd
@@ -49,17 +49,18 @@ execute:
 ## The Answer {.center}
 
 ::: {.fragment .fade-in}
-### **MAYBE**
-### (with significant methodological caveats)
+### **NO**
+### (Stars are NOT worth their premiums)
 :::
 
 ::: {.fragment .fade-in}
-**Star power shows statistical significance but modest effects**
+**Star power has minimal impact on ROI**
 
 ::: {style="font-size: 0.85em;"}
-- Statistical correlation: r = 0.078 (weak but significant, p < 0.001)
-- ML importance: 85% ⚠️ **REQUIRES REANALYSIS** (target leakage detected)
-- Effect size: Cohen's d = 0.14 (negligible practical significance)
+- Statistical correlation: r = 0.078 (weak, p < 0.001)
+- ML importance: **1.12%** (Rank #29 out of 51 features)
+- Effect size: Cohen's d = 0.14 (negligible)
+- Best model: XGBoost R² = 33.7% (without revenue)
 - Sample: 640 movies (12%) with complete cast financial data
 :::
 :::
@@ -123,7 +124,7 @@ execute:
 
 - 6 models trained
 - Train/test split: 80/20
-- Best: XGBoost (93.2% R²)
+- Best: XGBoost (33.7% R²)
 - Feature importance extraction
 - Cross-validation
 :::
@@ -155,7 +156,7 @@ execute:
 :::
 :::
 
-**Note:** Cast ROI correlation is 0.078 (weak linear relationship), but ML feature importance is 85% (captures non-linear patterns)
+**Note:** Cast ROI correlation is 0.078 (weak linear relationship), and ML confirms this with low feature importance of 1.12% (rank #29)
 
 ## ANOVA: Star Tiers {.smaller}
 
@@ -177,7 +178,7 @@ execute:
 :::
 
 ::: {style="font-size: 0.85em; margin-top: 1em; padding: 0.5em; background-color: #fff3cd; border-left: 4px solid #ffc107;"}
-**Note:** The Unknown/C-list category's high ROI (350.1%) is misleading - it includes 88% of all movies with missing cast data. This is NOT evidence that unknown actors perform better. Our star power analysis focuses on the 640 movies (12%) with complete cast financial data.
+**Note:** The Unknown/C-list category's high ROI (350.1%) is misleading for two reasons: (1) It includes 88% of movies with missing cast data, and (2) It's heavily skewed by **micro-budget outliers** (e.g., a $10K film earning $1M = 10,000% ROI). This is NOT evidence that unknown actors perform better. Our star power analysis focuses on the 640 movies (12%) with complete cast financial data.
 :::
 
 ## T-Test: Star Power Impact {.smaller}
@@ -204,39 +205,43 @@ execute:
 - P-value: 0.024
 - Cohen's d: 0.14 (negligible effect size)
 
-**Statistically significant (p<0.05) but practically small difference**
+**Why +121% is "negligible":**
+- **High variance** - distributions overlap heavily
+- Average driven by **outliers**, not consistency
+- Stars don't **guarantee** higher ROI
+- Predictability near zero (d=0.14)
 :::
 :::
 
 ## Machine Learning Results {.smaller}
 
-**6 Models Trained:**
+**6 Models Trained (Revenue Excluded - Fixed):**
 
 | Model | R² Score |
 |-------|----------|
-| **XGBoost** | **93.2%** ✓ |
-| Gradient Boosting | 92.6% |
-| Random Forest | 88.2% |
-| Lasso Regression | 33.9% |
-| Ridge Regression | 33.8% |
-| Linear Regression | 33.6% |
+| **XGBoost** | **33.7%** ✓ |
+| Lasso Regression | 31.5% |
+| Linear Regression | 31.5% |
+| Ridge Regression | 31.5% |
+| Gradient Boosting | 30.3% |
+| Random Forest | 29.9% |
 
-::: {style="font-size: 0.75em; margin-top: 1em; padding: 0.5em; background-color: #f8d7da; border-left: 4px solid #dc3545;"}
-**CRITICAL: Target Leakage Detected** - Models used "revenue" as a feature to predict ROI, which is defined as (Revenue - Budget) / Budget. This artificially inflates accuracy. Models must be re-trained excluding revenue for valid results.
+::: {style="font-size: 0.75em; margin-top: 1em; padding: 0.5em; background-color: #d1ecf1; border-left: 4px solid #0c5460;"}
+**Fixed:** Revenue excluded from features. R² dropped from 93.2% to 33.7% - the original high accuracy was due to target leakage.
 :::
 
 ## Feature Importance {.smaller}
 
-![](images/analysis/feature_importance.png){width=80%}
+![](images/analysis/feature_importance_fixed.png){width=80%}
 
-**Top 3 Features (ML Importance):**
-1. **cast_avg_roi: 85.05%**
-2. revenue: 3.37% ⚠️ TARGET LEAKAGE
-3. budget_log: 2.12%
+**Top 5 Features (ML Importance - Fixed):**
+1. **budget_micro: 30.4%** (Low budget category)
+2. **runtime_long: 8.2%** (Movie length)
+3. **vote_count: 5.3%** (Popularity)
+4. **num_top_actors: 5.0%** (Number of stars)
+5. **is_franchise: 4.7%** (Sequel status)
 
-::: {style="font-size: 0.75em; margin-top: 0.5em; padding: 0.5em; background-color: #f8d7da; border-left: 4px solid #dc3545;"}
-**Target Leakage Issue:** Revenue cannot be known before a movie's release, so it should NOT be used to predict ROI. These results require reanalysis excluding revenue.
-:::
+**Star Power (cast_avg_roi): 1.12% - Rank #29**
 
 ## Budget vs ROI {.smaller}
 
@@ -274,78 +279,78 @@ execute:
 
 ::: columns
 ::: {.column width="50%"}
-**What Works:**
+**What Actually Drives ROI:**
 
-1. Hire proven ROI actors (>200%)
-2. Analyze historical performance
-3. Track record > Social media fame
+1. **Low budgets** (30% importance)
+2. **Franchise status** (5% importance)
+3. **Movie length** (8% importance)
+4. **Audience engagement** (vote count)
 :::
 
 ::: {.column width="50%"}
-**What Doesn't:**
+**What Doesn't Drive ROI:**
 
-4. Overspending on budget
-5. Summer release timing alone
-6. Genre selection without stars
+1. Star power (1.12% importance)
+2. High budgets (negative correlation)
+3. Number of top actors alone
 :::
 :::
 
-**Bottom Line:** Cast first, budget second
+**Bottom Line:** Budget discipline first, quality content second, stars third (if at all)
 
 ## Limitations & Future Work {.smaller}
 
-**Critical Limitations:**
-- **Target Leakage:** ML models incorrectly used revenue to predict ROI (invalidates 93.2% R² score)
+**Limitations:**
 - **Limited cast data:** Only 12% of movies (640) have complete actor ROI history
 - **Small effect size:** Cohen's d = 0.14 (negligible practical significance)
+- **Modest model accuracy:** Best R² = 33.7% (66% of variance unexplained)
 - Pre-streaming era data (1915-2017)
 - No marketing spend data
+- No social media metrics
 - Correlation ≠ causation
 
-**Immediate Next Steps:**
-- Re-train ML models WITHOUT revenue feature
-- Expect R² to drop significantly (likely 30-50%)
-- Recalculate feature importance rankings
+**What We Fixed:**
+- ✓ Removed revenue feature (target leakage)
+- ✓ R² corrected from 93.2% to 33.7%
+- ✓ Feature importance accurately reflects pre-release predictors
 
 **Future Research:**
-- Add Netflix/Disney+ data
-- Include social media metrics
-- Test with 2024-2025 releases
+- Add streaming platform data (Netflix, Disney+)
+- Include social media influence metrics
+- Test with 2020-2025 releases
+- Analyze marketing spend impact
 
 ## Conclusion {.center}
 
-### **Stars MAY Be Worth Their Premiums**
-### **(with significant caveats)**
+### **Stars Are NOT Worth Their Premiums**
+### **(based on ROI data)**
 
 ::: {.fragment .fade-in}
-**IF they have proven ROI > 200%**
-:::
-
-::: {.fragment .fade-in}
-**Statistical Evidence (VALID):**
-- Statistically significant correlation (p < 0.001)
-- Weak linear relationship (r = 0.078, explains 0.61% variance)
+**Statistical Evidence:**
+- Weak correlation (r = 0.078, p < 0.001)
+- Explains only 0.61% of variance
 - Negligible effect size (Cohen's d = 0.14)
 - Based on 640 movies (12%) with complete cast financial data
 
-**Machine Learning Evidence (INVALID - Needs Reanalysis):**
-- 85% of ML prediction importance ⚠️ **TARGET LEAKAGE**
-- 93.2% accuracy ⚠️ **INFLATED BY USING REVENUE**
-- Must re-run models without revenue feature
+**Machine Learning Evidence (Fixed):**
+- Star power: **1.12% importance (Rank #29 of 51)**
+- XGBoost R²: **33.7%** (after fixing target leakage)
+- Top factors: Budget category (30%), Runtime (8%), Popularity (5%)
 :::
 
 ::: {.fragment .fade-in}
-**Honest Recommendation:** Star power matters but is not dominant. Success requires multiple factors: quality storytelling, budget discipline, and yes, some star power.
+**Data-Driven Recommendation:** Focus on production quality, franchise potential, and budget management rather than celebrity salaries. Consider talented unknown actors over expensive stars.
 :::
 
 ## Questions? {.center}
 
 **Repository:** github.com/INFO523-F25/final-project-juan-nadal-solo
 
-**Key Metrics:**
+**Key Findings:**
 - 5,311 movies analyzed
-- 93.2% prediction accuracy
-- 85% star power importance
+- Star power: 1.12% importance (Rank #29)
+- Budget category: 30% importance (Top factor)
+- Best model R²: 33.7%
 
 **Contact:** College of Information Science, University of Arizona
 
