Refactor `02_star_power_analysis.ipynb`: update execution metadata, increment cell execution counts for consistency, and enhance analysis reproducibility.

--- a/notebooks/02_star_power_analysis.ipynb
+++ b/notebooks/02_star_power_analysis.ipynb
@@ -44,8 +44,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:22.984214Z",
-     "start_time": "2025-11-23T02:49:22.977197Z"
+     "end_time": "2025-11-23T03:01:57.564124Z",
+     "start_time": "2025-11-23T03:01:57.557125Z"
     }
    },
    "source": [
@@ -86,14 +86,14 @@
      ]
     }
    ],
-   "execution_count": 174
+   "execution_count": 196
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:23.073669Z",
-     "start_time": "2025-11-23T02:49:23.041591Z"
+     "end_time": "2025-11-23T03:01:57.633018Z",
+     "start_time": "2025-11-23T03:01:57.600695Z"
     }
    },
    "source": [
@@ -111,7 +111,8 @@
     "if 'cast_avg_roi' in df.columns:\n",
     "    print(f\"\\n✓ Star power feature 'cast_avg_roi' found\")\n",
     "    print(f\"  Movies with star data: {df['cast_avg_roi'].notna().sum():,}\")\n",
-    "    print(f\"  Star power range: {df['cast_avg_roi'].min():.1f}% to {df['cast_avg_roi'].max():.1f}%\")\nelse:\n",
+    "    print(f\"  Star power range: {df['cast_avg_roi'].min():.1f}% to {df['cast_avg_roi'].max():.1f}%\")\n",
+    "else:\n",
     "    print(\"\\n⚠ Warning: 'cast_avg_roi' not found. Check feature names.\")"
    ],
    "outputs": [
@@ -133,7 +134,7 @@
      ]
     }
    ],
-   "execution_count": 175
+   "execution_count": 197
   },
   {
    "cell_type": "markdown",
@@ -169,8 +170,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:23.085689Z",
-     "start_time": "2025-11-23T02:49:23.080177Z"
+     "end_time": "2025-11-23T03:01:57.657195Z",
+     "start_time": "2025-11-23T03:01:57.652064Z"
     }
    },
    "source": [
@@ -201,14 +202,14 @@
      ]
     }
    ],
-   "execution_count": 176
+   "execution_count": 198
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:23.110991Z",
-     "start_time": "2025-11-23T02:49:23.101721Z"
+     "end_time": "2025-11-23T03:01:57.703280Z",
+     "start_time": "2025-11-23T03:01:57.691820Z"
     }
    },
    "source": [
@@ -261,14 +262,14 @@
      ]
     }
    ],
-   "execution_count": 177
+   "execution_count": 199
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:23.141228Z",
-     "start_time": "2025-11-23T02:49:23.133175Z"
+     "end_time": "2025-11-23T03:01:57.735236Z",
+     "start_time": "2025-11-23T03:01:57.726226Z"
     }
    },
    "source": [
@@ -314,14 +315,14 @@
      ]
     }
    ],
-   "execution_count": 178
+   "execution_count": 200
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:23.182231Z",
-     "start_time": "2025-11-23T02:49:23.160279Z"
+     "end_time": "2025-11-23T03:01:57.773401Z",
+     "start_time": "2025-11-23T03:01:57.749241Z"
     }
    },
    "source": [
@@ -409,14 +410,14 @@
      ]
     }
    ],
-   "execution_count": 179
+   "execution_count": 201
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:23.662561Z",
-     "start_time": "2025-11-23T02:49:23.187771Z"
+     "end_time": "2025-11-23T03:01:58.270509Z",
+     "start_time": "2025-11-23T03:01:57.784622Z"
     }
    },
    "source": [
@@ -467,7 +468,7 @@
      ]
     }
    ],
-   "execution_count": 180
+   "execution_count": 202
   },
   {
    "cell_type": "markdown",
@@ -482,8 +483,8 @@
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:23.679357Z",
-     "start_time": "2025-11-23T02:49:23.671166Z"
+     "end_time": "2025-11-23T03:01:58.287031Z",
+     "start_time": "2025-11-23T03:01:58.279483Z"
     }
    },
    "source": [
@@ -517,14 +518,14 @@
      ]
     }
    ],
-   "execution_count": 181
+   "execution_count": 203
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:23.699762Z",
-     "start_time": "2025-11-23T02:49:23.693388Z"
+     "end_time": "2025-11-23T03:01:58.305170Z",
+     "start_time": "2025-11-23T03:01:58.299115Z"
     }
    },
    "source": [
@@ -563,14 +564,14 @@
      ]
     }
    ],
-   "execution_count": 182
+   "execution_count": 204
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:23.718331Z",
-     "start_time": "2025-11-23T02:49:23.710311Z"
+     "end_time": "2025-11-23T03:01:58.327751Z",
+     "start_time": "2025-11-23T03:01:58.319216Z"
     }
    },
    "source": [
@@ -619,14 +620,14 @@
      ]
     }
    ],
-   "execution_count": 183
+   "execution_count": 205
   },
   {
    "cell_type": "code",
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:24.277011Z",
-     "start_time": "2025-11-23T02:49:23.727878Z"
+     "end_time": "2025-11-23T03:01:58.932149Z",
+     "start_time": "2025-11-23T03:01:58.337761Z"
     }
    },
    "source": [
@@ -665,19 +666,25 @@
      ]
     }
    ],
-   "execution_count": 184
+   "execution_count": 206
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Section 3: ANOVA - Star Tier Comparison\n",
     "\n",
     "Test whether ROI differs significantly across star tiers using Analysis of Variance (ANOVA)."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-23T03:01:58.959227Z",
+     "start_time": "2025-11-23T03:01:58.943684Z"
+    }
+   },
    "source": [
     "\n",
     "# SECTION 3: ANOVA - Star Tier ROI Comparison\n",
@@ -726,12 +733,6 @@
     "    print(\"FAIL TO REJECT the null hypothesis.\")\n",
     "print(\"=\"*70)"
    ],
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:24.306750Z",
-     "start_time": "2025-11-23T02:49:24.291017Z"
-    }
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -765,10 +766,16 @@
      ]
     }
    ],
-   "execution_count": 185
+   "execution_count": 207
   },
   {
    "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-23T03:01:59.572471Z",
+     "start_time": "2025-11-23T03:01:58.965748Z"
+    }
+   },
    "source": [
     "# Visualize ROI distributions by star tier\n",
     "fig, axes = plt.subplots(1, 2, figsize=(15, 6))\n",
@@ -814,12 +821,6 @@
     "\n",
     "print(\"ANOVA visualization complete (outliers handled for clarity)\")"
    ],
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:24.931165Z",
-     "start_time": "2025-11-23T02:49:24.333325Z"
-    }
-   },
    "outputs": [
     {
      "data": {
@@ -842,19 +843,25 @@
      ]
     }
    ],
-   "execution_count": 186
+   "execution_count": 208
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "## Section 4: T-Test - Top-Tier Stars vs All Other Films\n",
     "\n",
     "Compare ROI between movies with top-tier stars (A-list + Superstar, cast_avg_roi >= 150%) and all other films using independent samples t-test."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-23T03:01:59.599275Z",
+     "start_time": "2025-11-23T03:01:59.582992Z"
+    }
+   },
    "source": [
     "# SECTION 4: Independent T-Test - Top-Tier Stars vs All Other Films\n",
     "print(\"T-TEST: TOP-TIER STARS VS ALL OTHER FILMS\")\n",
@@ -927,12 +934,6 @@
     "    print(\"✗ NOT STATISTICALLY SIGNIFICANT (p >= 0.05)\")\n",
     "print(\"=\"*70)"
    ],
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:25.045253Z",
-     "start_time": "2025-11-23T02:49:25.025368Z"
-    }
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -982,10 +983,16 @@
      ]
     }
    ],
-   "execution_count": 187
+   "execution_count": 209
   },
   {
    "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-23T03:02:00.490343Z",
+     "start_time": "2025-11-23T03:01:59.605920Z"
+    }
+   },
    "source": [
     "# Visualize Top-Tier vs All Other comparison\n",
     "fig, axes = plt.subplots(1, 3, figsize=(18, 5))\n",
@@ -1036,12 +1043,6 @@
     "\n",
     "print(\"T-test visualization complete (outliers handled for clarity)\")"
    ],
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:26.434933Z",
-     "start_time": "2025-11-23T02:49:25.110509Z"
-    }
-   },
    "outputs": [
     {
      "data": {
@@ -1064,20 +1065,26 @@
      ]
     }
    ],
-   "execution_count": 188
+   "execution_count": 210
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "\n",
     "## Section 5: Star Power vs Budget - Relative Importance\n",
     "\n",
     "Compare the predictive power of star power vs production budget for ROI."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-23T03:02:00.894273Z",
+     "start_time": "2025-11-23T03:02:00.878206Z"
+    }
+   },
    "source": [
     "\n",
     "# SECTION 5: Star Power vs Budget - Correlation Comparison\n",
@@ -1130,12 +1137,6 @@
     "    print(f\"Budget is the MORE IMPORTANT predictor.\")\n",
     "print(\"=\"*70)"
    ],
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:27.025287Z",
-     "start_time": "2025-11-23T02:49:27.008182Z"
-    }
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -1186,10 +1187,16 @@
      ]
     }
    ],
-   "execution_count": 189
+   "execution_count": 211
   },
   {
    "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-23T03:02:02.371514Z",
+     "start_time": "2025-11-23T03:02:00.913823Z"
+    }
+   },
    "source": [
     "\n",
     "# Visualize star power vs budget comparison\n",
@@ -1257,12 +1264,6 @@
     "\n",
     "print(\"Star power vs budget comparison visualization complete\")"
    ],
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:29.046550Z",
-     "start_time": "2025-11-23T02:49:27.051690Z"
-    }
-   },
    "outputs": [
     {
      "data": {
@@ -1285,20 +1286,26 @@
      ]
     }
    ],
-   "execution_count": 190
+   "execution_count": 212
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "\n",
     "## Section 6: Top Performers Analysis\n",
     "\n",
     "Identify movies and patterns with highest star power using pandas ranking and filtering."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-23T03:02:02.793395Z",
+     "start_time": "2025-11-23T03:02:02.772828Z"
+    }
+   },
    "source": [
     "\n",
     "# SECTION 6: Top Performers Analysis\n",
@@ -1326,12 +1333,6 @@
     "\n",
     "print(f\"Overlap (Top 100): {len(overlap)} movies appear in both lists ({len(overlap)}%)\")"
    ],
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:29.581195Z",
-     "start_time": "2025-11-23T02:49:29.558678Z"
-    }
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -1369,10 +1370,16 @@
      ]
     }
    ],
-   "execution_count": 191
+   "execution_count": 213
   },
   {
    "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-23T03:02:02.822567Z",
+     "start_time": "2025-11-23T03:02:02.807917Z"
+    }
+   },
    "source": [
     "# Success pattern analysis\n",
     "# Use the same threshold as for is_alist to define high star power\n",
@@ -1417,12 +1424,6 @@
     "recent_trend = df[df['release_year'] >= 2010].groupby('release_year')['cast_avg_roi'].agg(['mean', 'count'])\n",
     "print(recent_trend.round(2))"
    ],
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:29.605239Z",
-     "start_time": "2025-11-23T02:49:29.588204Z"
-    }
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -1451,10 +1452,16 @@
      ]
     }
    ],
-   "execution_count": 192
+   "execution_count": 214
   },
   {
    "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-23T03:02:04.377308Z",
+     "start_time": "2025-11-23T03:02:02.831613Z"
+    }
+   },
    "source": [
     "\n",
     "# Visualize top performers and trends\n",
@@ -1514,12 +1521,6 @@
     "\n",
     "print(\"Top performers analysis visualization complete\")"
    ],
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:31.870473Z",
-     "start_time": "2025-11-23T02:49:29.613427Z"
-    }
-   },
    "outputs": [
     {
      "data": {
@@ -1542,24 +1543,30 @@
      ]
     }
    ],
-   "execution_count": 193
+   "execution_count": 215
   },
   {
    "cell_type": "markdown",
-   "source": [
-    "## Section 8: Summary Statistics and Final Conclusions\n",
-    "\n",
-    "Comprehensive summary of all findings from statistical and machine learning analysis."
-   ],
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-11-23T02:13:45.707130Z",
      "start_time": "2025-11-23T02:13:45.702761Z"
     }
-   }
+   },
+   "source": [
+    "## Section 8: Summary Statistics and Final Conclusions\n",
+    "\n",
+    "Comprehensive summary of all findings from statistical and machine learning analysis."
+   ]
   },
   {
    "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-23T03:02:04.762025Z",
+     "start_time": "2025-11-23T03:02:04.744214Z"
+    }
+   },
    "source": [
     "# SECTION 8: Final Summary and Conclusions\n",
     "\n",
@@ -1672,12 +1679,6 @@
     "print(\"FINAL CONCLUSION: Stars are NOT worth their premiums\")\n",
     "print(\"=\"*70)"
    ],
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:32.449377Z",
-     "start_time": "2025-11-23T02:49:32.429449Z"
-    }
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -1801,20 +1802,26 @@
      ]
     }
    ],
-   "execution_count": 194
+   "execution_count": 216
   },
   {
    "cell_type": "markdown",
+   "metadata": {},
    "source": [
     "\n",
     "## Section 7: Summary Statistics and Conclusions\n",
     "\n",
     "Comprehensive summary of all findings from the star power analysis."
-   ],
-   "metadata": {}
+   ]
   },
   {
    "cell_type": "markdown",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-23T02:13:45.754736700Z",
+     "start_time": "2025-11-23T01:52:30.064140Z"
+    }
+   },
    "source": [
     "## Analysis Complete\n",
     "\n",
@@ -1837,16 +1844,16 @@
     "- Budget discipline: 27× more important than star power (30.4% vs 1.12%)\n",
     "\n",
     "**Recommendation:** Studios should prioritize budget management, franchise development, and quality content over expensive celebrity salaries."
-   ],
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-23T02:13:45.754736700Z",
-     "start_time": "2025-11-23T01:52:30.064140Z"
-    }
-   }
+   ]
   },
   {
    "cell_type": "code",
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2025-11-23T03:02:04.774674Z",
+     "start_time": "2025-11-23T03:02:04.767549Z"
+    }
+   },
    "source": [
     "\n",
     "# Export summary statistics to CSV for documentation\n",
@@ -1895,12 +1902,6 @@
     "print(\"Summary statistics exported to: ../data/processed/star_power_analysis_summary.csv\")\n",
     "print(\"\\nAnalysis complete. All visualizations saved to ../images/analysis/\")"
    ],
-   "metadata": {
-    "ExecuteTime": {
-     "end_time": "2025-11-23T02:49:32.466662Z",
-     "start_time": "2025-11-23T02:49:32.456893Z"
-    }
-   },
    "outputs": [
     {
      "name": "stdout",
@@ -1912,7 +1913,7 @@
      ]
     }
    ],
-   "execution_count": 195
+   "execution_count": 217
   },
   {
    "cell_type": "markdown",
